--- a/api/composer.json
+++ b/api/composer.json
@@ -18,6 +18,7 @@
         "laravel/pint": "^1.20"
     },
     "require": {
-        "flightphp/core": "^3.13"
+        "flightphp/core": "^3.13",
+        "rmccue/requests": "^2.0"
     }
 }
