--- a/ML/Dockerfile
+++ b/ML/Dockerfile
@@ -23,4 +23,4 @@ COPY . .
 EXPOSE 5000
 
 # Comando para ejecutar la API
-CMD ["flask", "run", "--host", "0.0.0.0", "--port", "5000"]
+CMD ["flask", "run", "--host", "0.0.0.0", "--port", "5000", "--debug"]
