--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "3.8"
 services:
   web:
-    image: nginx:alpine
-    volumes:
-      - ./frontend:/usr/share/nginx/html
+    build:
+      context: ./frontend
     ports:
-      - 5500:5500
+      - 5500:80
     networks:
       - app-network # Los servicios estarán en la misma red
   python-api:
