--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -50,7 +50,7 @@ RUN adduser --system --uid 1001 nextjs
 
 # Copy necessary files from the builder stage
 COPY --from=builder /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 
