--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
       MYSQL_DATABASE: $MYSQL_DATABASE
     ports:
-      - "$MYSQL_LOCAL_PORT:MYSQL_PORT"
+      - "$MYSQL_LOCAL_PORT:$MYSQL_PORT"
     networks:
       - app-network
     volumes:
-      - mysql-data:/var/lib/mysql
+      - ./mysql-data:/var/lib/mysql
 
   nextjs:
     build:
