--- a/ML/requirements.txt
+++ b/ML/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-MySQLdb==2.0.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
@@ -13,6 +14,7 @@ joblib==1.4.2
 MarkupSafe==3.0.2
 mysqlclient==2.2.7
 numpy==2.2.2
+packaging==24.2
 pandas==2.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.1
